fix: overflow-x hidden in body

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
   font-family: "Poppins", sans-serif;
   user-select: none;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
